# luajit2-flame-rs

./: .clang-format  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
bpf/: common.h  lua_state.h  lua_state.h.orig  profile.bpf.c  profile.skel.h  vmlinux.h
src/: main.rs  perf.rs  syms.rs  types.rs  unwind.rs
tests/: cpu-burn.lua  harness.c  luajit_harness.rs
