[package]
name = "lua-flame"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "eBPF-based LuaJIT2 flame graph profiler (Rust user space)"
license = "BSD-2-Clause"

[[bin]]
name = "lua-flame"
path = "src/main.rs"

[dependencies]
libbpf-rs    = { version = "0.24", features = ["vendored"] }
libc         = "0.2"
clap         = { version = "4.5", features = ["derive"] }
goblin       = { version = "0.9", default-features = false, features = ["elf32", "elf64", "endian_fd", "alloc", "std"] }
blazesym     = "0.2"
inferno      = { version = "0.11", default-features = false }
anyhow       = "1"
plain        = "0.2"

[build-dependencies]
libbpf-cargo = "0.24"

[profile.release]
lto = true
strip = true
